CI/CD workflow tweak for migration

--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -8,9 +8,9 @@ env:
 
 on:
   pull_request:
-    branches: [ deploy ]
+    branches: [ deploy dev ]
   push:
-    branches: [ backend ]
+    branches: [ dev ]
 
 jobs:
   build-pytest:
