--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -6,6 +6,10 @@ env:
   DEPLOY_PACKAGE_NAME: "backend_production_${{ github.sha }}.zip"
   AWS_REGION_NAME: "ca-central-1"
 
+defaults:
+  run:
+    working-directory: backend
+    
 on:
   push:
     branches: [ deploy ]
@@ -45,7 +49,7 @@ jobs:
       - name: Git clone repo
         uses: actions/checkout@v1
       - name: create zip deploy package
-        run: cd backend; zip -r -D ../${{  env.DEPLOY_PACKAGE_NAME }} * -x *.git*
+        run: zip -r -D ${{  env.DEPLOY_PACKAGE_NAME }} * -x *.git*
 
       - name: AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
