Added gulp build files and profile for EB

--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -3,7 +3,7 @@ env:
   EB_PACKAGE_S3_BUCKET_NAME: "frontend-s3-production"
   EB_APPLICATION_NAME: "frontend-production"
   EB_ENVIRONMENT_NAME: "FrontendProduction-env"
-  LOCAL_DEPLOY_PACKAGE_NAME: "frontend_production_deploy.zip"
+  LOCAL_DEPLOY_PACKAGE_NAME: "frontend_package.zip"
   S3_DEPLOY_PACKAGE_NAME: "frontend_production_${{ github.sha }}.zip"
   AWS_REGION_NAME: "ca-central-1"
 
