--- a/.github/workflows/frontend_test.yml
+++ b/.github/workflows/frontend_test.yml
@@ -3,7 +3,7 @@ env:
   EB_PACKAGE_S3_BUCKET_NAME: "frontend-s3-test"
   EB_APPLICATION_NAME: "frontend-test"
   EB_ENVIRONMENT_NAME: "FrontendTest-env"
-  LOCAL_DEPLOY_PACKAGE_NAME: "frontend_test_deploy.zip"
+  LOCAL_DEPLOY_PACKAGE_NAME: "frontend_package.zip"
   S3_DEPLOY_PACKAGE_NAME: "frontend_test_${{ github.sha }}.zip"
   AWS_REGION_NAME: "ca-central-1"
 
