CI/CD set working directory

--- a/.github/workflows/frontend_test.yml
+++ b/.github/workflows/frontend_test.yml
@@ -6,10 +6,6 @@ env:
   LOCAL_DEPLOY_PACKAGE_NAME: "frontend_package.zip"
   S3_DEPLOY_PACKAGE_NAME: "frontend_test_${{ github.sha }}.zip"
   AWS_REGION_NAME: "ca-central-1"
-
-defaults:
-  run:
-    working-directory: frontend
     
 on:
   pull_request:
@@ -20,6 +16,10 @@ on:
 
 jobs:
   build-to-s3:
+    defaults:
+      run:
+        working-directory: backend
+    
     runs-on: ubuntu-latest
 
     steps:
