--- a/.github/workflows/frontend_test.yml
+++ b/.github/workflows/frontend_test.yml
@@ -18,7 +18,7 @@ jobs:
   build-to-s3:
     defaults:
       run:
-        working-directory: backend
+        working-directory: frontend
     
     runs-on: ubuntu-latest
 
