--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-cli": "~2.3.0",
     "gulp-zip": "^5.0.2",
     "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
