--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,24 @@
-Flask~=1.1.2
-pytest~=6.1.1
+attrs==20.2.0
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.9
+Flask-SQLAlchemy==2.4.4
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+packaging==20.4
+# IMPORTANT !!!!! pg8000 version MUST BE <= 1.16.5. VERSION 1.16.6 HAS CONFLICT WITH SQLALCHEMY
+# UNLESS SQLALCHEMY HAS AN UPDATE ADDRESSING THIS ISSUE, ENFORCE 1.16.5 VERSION AND IGNORE UPDATE WARNINGS
+pg8000==1.16.5
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.1.1
+pytest-dotenv==0.5.2
+python-dotenv==0.14.0
+scramp==1.2.0
+six==1.15.0
+SQLAlchemy==1.3.20
+toml==0.10.1
+Werkzeug==1.0.1
