Modified db models to fit the new db with PostGIS geom objects.

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ DATABASE_URL='postgresql+pg8000://gabriel:Passw0rd123@accelsnow.com:5432/mapdb'
 LINK_TABLE_NAME='links'
 NODE_TABLE_NAME='nodes'
 TRAVEL_DATA_TABLE_NAME='travel'
+POSTGIS_GEOM_SRID=4326
