Corrected the logic for link-nodes. Updated API. Now returns series of links connecting two points. Modified env to match renamed tables.

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='Z!.hk3Avjq66Hfb33YwkdnQq_kN9uxAfGr!Ygaa2*7@eeaQrFn'
 DATABASE_URL='postgresql+pg8000://gabriel:Passw0rd123@accelsnow.com:5432/mapdb'
-LINK_TABLE_NAME='links'
-NODE_TABLE_NAME='nodes'
+LINK_TABLE_NAME='here_links'
+NODE_TABLE_NAME='here_nodes'
 TRAVEL_DATA_TABLE_NAME='travel'
 POSTGIS_GEOM_SRID=4326
