--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
+    "react-bootstrap": "^1.0.1",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "~2.3.0",
