Implemented download file for travel data (csv and xlsx).

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ LINK_TABLE_NAME='here_links'
 NODE_TABLE_NAME='here_nodes'
 TRAVEL_DATA_TABLE_NAME='travel'
 POSTGIS_GEOM_SRID=4326
+TEMP_FILE_LOCATION='tmp'
