--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,11 +15,14 @@ pg8000==1.16.5
 pluggy==0.13.1
 py==1.9.0
 pyparsing==2.4.7
-pytest==6.1.1
+pytest==6.1.2
 pytest-dotenv==0.5.2
-python-dotenv==0.14.0
+python-dotenv==0.15.0
 scramp==1.2.0
 six==1.15.0
 SQLAlchemy==1.3.20
-toml==0.10.1
+testing.common.database==2.0.3
+testing.postgresql==1.3.0
+toml==0.10.2
 Werkzeug==1.0.1
+XlsxWriter==1.3.7
