--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,20 +7,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.0",
-    "react-bootstrap": "^1.0.1",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "~2.3.0",
     "gulp-zip": "^5.0.2",
+    "js-file-download": "^0.4.12",
     "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "react-sidebar": "^3.0.2",
-    "axios": "^0.21.0"
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
