Modified travel-data-file API to accept multiple time periods. Commented original travel-data query

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ NODE_TABLE_NAME='here_nodes'
 TRAVEL_DATA_TABLE_NAME='travel'
 POSTGIS_GEOM_SRID=4326
 TEMP_FILE_LOCATION='tmp'
+KEEP_TEMP_FILE='true'
