--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-date-picker": "^8.0.3",
+    "react-time-picker": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-router-dom": "^5.2.0",
