--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,13 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-date-picker": "^8.0.3",
-    "react-time-picker": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
+    "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "react-time-picker": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
