--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ TRAVEL_DATA_TABLE_NAME='travel'
 POSTGIS_GEOM_SRID=4326
 TEMP_FILE_LOCATION='tmp'
 KEEP_TEMP_FILE='true'
+DB_DATA_START_DATE='2018-09-01 00:00'
