--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
-attrs==20.2.0
+atomicwrites==1.4.0
+attrs==20.3.0
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-SQLAlchemy==2.4.4
@@ -8,7 +10,7 @@ iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-packaging==20.4
+packaging==20.7
 # IMPORTANT !!!!! pg8000 version MUST BE <= 1.16.5. VERSION 1.16.6 HAS CONFLICT WITH SQLALCHEMY
 # UNLESS SQLALCHEMY HAS AN UPDATE ADDRESSING THIS ISSUE, ENFORCE 1.16.5 VERSION AND IGNORE UPDATE WARNINGS
 pg8000==1.16.5
@@ -18,6 +20,7 @@ pyparsing==2.4.7
 pytest==6.1.2
 pytest-dotenv==0.5.2
 python-dotenv==0.15.0
+pytz==2020.4
 scramp==1.2.0
 six==1.15.0
 SQLAlchemy==1.3.20
