made metric srid a system environment var

--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,7 @@ LINK_TABLE_NAME='here_links'
 NODE_TABLE_NAME='here_nodes'
 TRAVEL_DATA_TABLE_NAME='travel'
 POSTGIS_GEOM_SRID=4326
+POSTGIS_METRIC_SRID=2952
 TEMP_FILE_LOCATION='tmp'
 KEEP_TEMP_FILE='true'
 DB_DATA_START_DATE='2017-01-01 00:00'
