Re-added POSTGIS_GEOM_SRID as it is required by the database models.

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ DATABASE_URL='postgresql+pg8000://test:Test_password1202@accelsnow.com:5432/mapd
 LINK_TABLE_NAME='here_links'
 NODE_TABLE_NAME='here_nodes'
 TRAVEL_DATA_TABLE_NAME='travel'
+POSTGIS_GEOM_SRID=4326
 TEMP_FILE_LOCATION='tmp'
 KEEP_TEMP_FILE='true'
 DB_DATA_START_DATE='2017-01-01 00:00'
