upgrade react scripts from 4 to 5

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "5.x",
     "react-sidebar": "^3.0.2"
   },
   "scripts": {
