--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,20 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.0",
     "del": "^6.0.0",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-cli": "~2.3.0",
-    "gulp-zip": "^5.0.2",
+    "gulp-zip": "^4.2.0",
     "js-file-download": "^0.4.12",
     "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-date-picker": "^8.0.3",
-    "react-time-picker": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.x",
-    "react-sidebar": "^3.0.2"
+    "react-scripts": "^2.1.3",
+    "react-sidebar": "^3.0.2",
+    "react-time-picker": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
