--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,9 @@
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
     "react-sidebar": "^3.0.2",
-    "react-time-picker": "^4.0.1"
+    "react-time-picker": "^4.0.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
