--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "react-dropdown": "^1.9.0",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "5.x",
     "react-sidebar": "^3.0.2",
     "react-time-picker": "^4.0.1"
   },
