--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
     "js-file-download": "^0.4.12",
     "mapbox-gl": "^1.12.0",
     "pm2": "5.3.x",
-    "react": "^16.13.1",
+    "react": "18.x",
     "react-bootstrap": "^1.0.1",
     "react-date-picker": "^8.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "18.x",
     "react-dropdown": "^1.9.0",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
