--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "pm2": "5.3.x",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.0",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-cli": "~2.3.0",
-    "gulp-zip": "^5.0.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "axios": "^0.21.4",
+    "del": "^6.1.1",
     "js-file-download": "^0.4.12",
-    "mapbox-gl": "^1.12.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
-    "react-date-picker": "^8.0.3",
-    "react-dom": "^16.13.1",
-    "react-dropdown": "^1.9.0",
-    "react-notifications": "^1.7.2",
-    "react-router-dom": "^5.2.0",
+    "mapbox-gl": "^1.13.3",
+    "pm2": "5.3.x",
+    "react": "18.x",
+    "react-date-picker": "^8.4.0",
+    "react-dom": "18.x",
+    "react-dropdown": "^1.11.0",
+    "react-notifications": "^1.7.4",
     "react-scripts": "5.x",
     "react-sidebar": "^3.0.2",
     "react-time-picker": "^4.0.1"
@@ -31,7 +22,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
