--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ packaging==20.7
 # UNLESS SQLALCHEMY HAS AN UPDATE ADDRESSING THIS ISSUE, ENFORCE 1.16.5 VERSION AND IGNORE UPDATE WARNINGS
 pg8000==1.16.5
 pluggy==0.13.1
+psycopg2=2.9.6
 py==1.9.0
 pyparsing==2.4.7
 pytest==6.1.2
