--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-SQLAlchemy==2.4.4
 GeoAlchemy2==0.8.4
+gunicorn==20.1.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
