--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "private": false,
   "homepage": "http://10.160.2.198/traveltime-request",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "5.x",
     "axios": "^0.21.4",
     "del": "^6.1.1",
     "js-file-download": "^0.4.12",
