install react-leaflet

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.21.4",
     "del": "^6.1.1",
     "js-file-download": "^0.4.12",
+    "leaflet": "^1.9.3",
     "mapbox-gl": "^1.13.3",
     "pm2": "5.3.x",
     "react": "18.x",
     "react-date-picker": "^8.4.0",
     "react-dom": "18.x",
     "react-dropdown": "^1.11.0",
+    "react-leaflet": "^4.2.1",
     "react-notifications": "^1.7.4",
     "react-scripts": "5.x",
     "react-sidebar": "^3.0.2",
