--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,42 @@
   "private": false,
   "homepage": "http://10.160.2.198/traveltime-request",
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@mui/material": "5.x",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
-    "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.4",
+    "js-file-download": "^0.4.12",
+    "mapbox-gl": "^1.13.3",
+    "react": "18.x",
+    "react-date-picker": "^8.4.0",
+    "react-dom": "18.x",
+    "react-dropdown": "^1.11.0",
+    "react-notifications": "^1.7.4",
+    "react-refresh": "^0.11.0",
+    "react-sidebar": "^3.0.2",
+    "react-time-picker": "^4.0.1"
+  },
+  "devDependencies": {
+    "fancy-log": "^1.3.3",
+    "webpack": "^5.64.4",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "workbox-webpack-plugin": "^6.4.1",
+    "resolve": "^1.20.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.3.0",
+    "semver": "^7.3.5",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.2",
+    "terser-webpack-plugin": "^5.2.5",
+    "react-dev-utils": "^12.0.1",
+    "react-app-polyfill": "^3.0.0",
+    "pm2": "5.3.x",
+    "postcss": "^8.4.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.0.1",
+    "prompts": "^2.4.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -34,38 +63,12 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
-    "js-file-download": "^0.4.12",
-    "mapbox-gl": "^1.13.3",
-    "mini-css-extract-plugin": "^2.4.5",
-    "pm2": "5.3.x",
-    "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
-    "react": "18.x",
-    "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^8.4.0",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "18.x",
-    "react-dropdown": "^1.11.0",
-    "react-notifications": "^1.7.4",
-    "react-refresh": "^0.11.0",
-    "react-sidebar": "^3.0.2",
-    "react-time-picker": "^4.0.1",
-    "resolve": "^1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
-    "semver": "^7.3.5",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
-    "webpack": "^5.64.4",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "@babel/core": "^7.16.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@svgr/webpack": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -85,9 +88,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "fancy-log": "^1.3.3"
   },
   "jest": {
     "roots": [
