--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,52 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": false,
+  "name": "tt_request_app",
+  "version": "1.0.0",
+  "description": "Front-end UI for requesting historic travel times",
+  "main": "src/index.jsx",
+  "scripts": {
+    "start": "node server.js",
+    "test": "cypress run",
+    "lint": "npx eslint \"src/**/*.{js,jsx}\" ",
+    "build": "npx webpack --config webpack/prod.js",
+    "build-stats": "npm i && npx webpack --config webpack/prod.js --profile --json > stats.json",
+    "build-dev": "npm i && npx webpack --config webpack/dev.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CityofToronto/bdit_tt_request_app.git"
+  },
+  "license": "none",
+  "bugs": {
+    "url": "https://github.com/CityofToronto/bdit_tt_request_app/issues"
+  },
   "homepage": "http://10.160.2.198/traveltime-request",
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "7.x",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "4.x",
+    "css-loader": "6.x",
+    "dotenv": "^16.x",
+    "eslint": "^8.18.0",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-react": "^7.30.0",
+    "html-webpack-plugin": "5.x",
+    "less": "4.x",
+    "less-loader": "11.x",
+    "style-loader": "3.x",
+    "webpack": "5.x",
+    "webpack-cli": "4.x",
+    "webpack-deadcode-plugin": "^0.1.x",
+    "webpack-merge": "5.x"
+  },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/material": "5.x",
     "axios": "^0.21.4",
+    "express": "^4.18.2",
     "js-file-download": "^0.4.12",
     "mapbox-gl": "^1.13.3",
     "react": "18.x",
@@ -16,78 +57,5 @@
     "react-refresh": "^0.11.0",
     "react-sidebar": "^3.0.2",
     "react-time-picker": "^4.0.1"
-  },
-  "devDependencies": {
-    "fancy-log": "^1.3.3",
-    "webpack": "^5.64.4",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1",
-    "resolve": "^1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
-    "semver": "^7.3.5",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
-    "react-dev-utils": "^12.0.1",
-    "react-app-polyfill": "^3.0.0",
-    "pm2": "5.3.x",
-    "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.18.1",
-    "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
-    "del": "^6.1.1",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.1.1",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "identity-obj-proxy": "^3.0.0",
-    "@babel/core": "^7.16.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
-    "@svgr/webpack": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.5"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
   }
 }
