--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -13,16 +13,12 @@ jobs:
     defaults:
       run:
         working-directory: ./frontend
-
-    strategy:
-      matrix:
-        node-version: [ 14.x ]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Node.js ${{ matrix.node-version }}
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14.x
           cache: 'npm'
       - name: install packages
         run: npm install
