--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -14,6 +14,9 @@ jobs:
       run:
         working-directory: ./frontend
     steps:
+      - name: test
+        working-directory: frontend
+        run: pwd
       - uses: actions/checkout@v3
       - name: Set up Node.js
         uses: actions/setup-node@v3
