--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -2,7 +2,6 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: JS linting
-
 on:
   pull_request:
     branches: [ deploy ]
@@ -12,18 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
-    steps:
-      - name: test
         working-directory: frontend
-        run: pwd
+    steps:
+      - run: pwd
       - uses: actions/checkout@v3
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 14.x
-          cache: 'npm'
-      - name: install packages
-        run: npm install
-      - name: lint
-        run:  npm run lint
+      - run: npm install
+      - run:  npm run lint
