--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
         "express": "^4.18.2",
         "leaflet": "^1.9.4",
         "react": "18.x",
+        "react-calendar": "^4.6.1",
         "react-date-picker": "^8.4.0",
         "react-dom": "18.x",
         "react-dropdown": "^1.11.0",
