--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 setuptools==59.6.0
-flask==2.2.2
+flask==3.0.3
 flask_cors==3.0.10
 gunicorn==20.1.0
 packaging==20.7
 psycopg==3.1.18
 python-dotenv==0.15.0
+numpy==1.26.0
