--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
         "@mui/material": "5.x",
         "express": "^4.18.2",
         "leaflet": "^1.9.4",
+        "p-queue": "^8.0.1",
         "react": "18.x",
         "react-calendar": "^4.6.1",
         "react-date-picker": "^8.4.0",
